--- a/index.html
+++ b/index.html
@@ -267,10 +267,11 @@
 		<tr>
 			<td width="720px"">
 			<div id="clustrmaps-widget"></div>
-				<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=7seMHMuQZlvELLsuK6wd30IX5cz7U58mGsA8iV8s6_o"></script></script>
+				<script type="text/javascript" id="clustrmaps" src="//www.clustrmaps.com/map_v2.png?d=ib3BFwjNMzxdfb4bMFb-nws4o8-9Uav7lnh116_3ycU&cl=ffffff"></script></script>
 				</script>
 			<div class="jvectormap-tip"></div>
 			</td>
+						   
 			<td valign="top">
 				<div style="clear:both;">
 				<p align="right"><font size="2">Last Updated on Oct. 23, 2021<br>
