--- a/index.html
+++ b/index.html
@@ -267,8 +267,7 @@
 		<tr>
 			<td width="720px"">
 			<div id="clustrmaps-widget"></div>
-				<script type="text/javascript" id="clustrmaps" src="//www.clustrmaps.com/map_v2.png?d=ib3BFwjNMzxdfb4bMFb-nws4o8-9Uav7lnh116_3ycU&cl=ffffff"></script></script>
-				</script>
+				<a href="https://clustrmaps.com/site/1bkqa"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=ib3BFwjNMzxdfb4bMFb-nws4o8-9Uav7lnh116_3ycU&cl=ffffff" /></a>
 			<div class="jvectormap-tip"></div>
 			</td>
 						   
