--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-    <li type="circle">[10/2021] I was nominated to serve as a reviewer for WACV 2022 Workshop on DNOW.</li>
-    <li type="circle">[10/2021] One paper was accepted by NeurIPS 2021 Workshop on Meta-Learning.</li>
-    <li type="circle">[09/2021] I was nominated to serve as a reviewer for NeurIPS 2021 Workshop on Meta-Learning .</li>
-    <li type="circle">[09/2021] I was nominated to serve as a PC member for SDM 2022. </li>
-    <li type="circle">[09/2021] I was nominated to serve as a PC member for IEEE BigData 2021.</li>
+	    <li type="circle">[10/2021] I was nominated to serve as a PC member for AAAI 2022.</li>
+	    <li type="circle">[10/2021] I was nominated to serve as a reviewer for WACV 2022 Workshop on DNOW.</li>
+	    <li type="circle">[10/2021] One paper was accepted by NeurIPS 2021 Workshop on Meta-Learning.</li>
+	    <li type="circle">[09/2021] I was nominated to serve as a reviewer for NeurIPS 2021 Workshop on Meta-Learning .</li>
+	    <li type="circle">[09/2021] I was nominated to serve as a PC member for SDM 2022. </li>
+	    <li type="circle">[09/2021] I was nominated to serve as a PC member for IEEE BigData 2021.</li>
 		<li type="circle">[08/2021] I was nominated to serve as a PC member for WSDM 2022. </li>
 		<li type="circle">[08/09/2021] I was officially hooded as a Ph.D.</li>
 		<li type="circle">[07/05/2021] I successfully passed my doctoral defense!</li>
@@ -234,7 +235,8 @@
 <h2>Academic Services</h2>
   <h3>Conference Reviewer</h3>
     <ul>
-	<li type="disc"> WACV 2022 Workshop on DNOW  (WACV-w) 2022.</li>
+	<li type="disc"> AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
+	<li type="disc"> WACV 2022 Workshop on DNOW (WACV-w) 2022.</li>
 	<li type="disc"> SIAM International Conference on Data Mining  (SDM) 2022.</li>
 	<li type="disc"> International Conference on Web Search and Data Mining (WSDM) 2022.</li>
 	<li type="disc"> NeurIPS 2021 Workshop on Meta-Learning (NeurIPS-w) 2021.</li>
