--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[11/2021] I was nominated to serve as a PC member for ACM SIGKDD 2022. </li>
 	    <li type="circle">[10/2021] I was nominated to serve as a PC member for AAAI 2022.</li>
 	    <li type="circle">[10/2021] I was nominated to serve as a reviewer for WACV 2022 Workshop on DNOW.</li>
 	    <li type="circle">[10/2021] One paper was accepted by NeurIPS 2021 Workshop on Meta-Learning.</li>
@@ -235,6 +236,7 @@
 <h2>Academic Services</h2>
   <h3>Conference Reviewer</h3>
     <ul>
+	<li type="disc"> ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
 	<li type="disc"> AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
 	<li type="disc"> WACV 2022 Workshop on DNOW (WACV-w) 2022.</li>
 	<li type="disc"> SIAM International Conference on Data Mining  (SDM) 2022.</li>
@@ -242,7 +244,6 @@
 	<li type="disc"> NeurIPS 2021 Workshop on Meta-Learning (NeurIPS-w) 2021.</li>
 	<li type="disc"> IEEE International Conference on Big Data (BigData) 2021.</li>
 	<li type="disc"> IEEE International Conference on Data Mining (ICDM) 2021.</li>
-	<li type="disc"> ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021.</li>
 	<li type="disc"> International Conference on Artificial Intelligence and Statistics (AISTATS) 2021.</li>
 	</ul>
   <h3>Journal Reviewer</h3>
