--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[12/2021] One paper was accepted by AAAI 2022. </li>
 	    <li type="circle">[11/2021] I was nominated to serve as a PC member for ACM SIGKDD 2022. </li>
 	    <li type="circle">[10/2021] I was nominated to serve as a PC member for AAAI 2022.</li>
 	    <li type="circle">[10/2021] I was nominated to serve as a reviewer for WACV 2022 Workshop on DNOW.</li>
@@ -118,7 +119,8 @@
   	<div class="row-text">
   		A Nested Bi-level Optimization Framework for Robust Few-Shot Learning<br/>
   		Krishnateja Killamsetty, Changbin Li, <span class="bold">Chen Zhao</span>, Rishabh Krishnan Iyer, Feng Chen<br/>
-  		NeurIPS Workshop on MetaLearn (<strong>NeurIPS-w</strong>), 2021 <br/>
+  		AAAI Conference on Artificial Intelligence (<span class="bold">AAAI<span>), 2022 <span class="bold">and<span> <br/> 
+		NeurIPS Workshop on MetaLearn (<strong>NeurIPS-w</strong>), 2021 <br/>
   		<a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">arXiv</a>
   	</div>
   </div>
