--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   	<div class="row-text">
   		A Nested Bi-level Optimization Framework for Robust Few-Shot Learning<br/>
   		Krishnateja Killamsetty, Changbin Li, <span class="bold">Chen Zhao</span>, Rishabh Krishnan Iyer, Feng Chen<br/>
-  		AAAI Conference on Artificial Intelligence (</strong>AAAI</strong>), 2022 </strong>and</strong> <br/> 
+  		AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2022 <strong>and</strong> <br/> 
 		NeurIPS Workshop on MetaLearn (<strong>NeurIPS-w</strong>), 2021 <br/>
   		<a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">arXiv</a>
   	</div>
