--- a/index.html
+++ b/index.html
@@ -95,20 +95,21 @@
     <ul>
 	    <li type="circle">[12/2021] One paper was accepted by AAAI 2022. </li>
 	    <li type="circle">[11/2021] I was nominated to serve as a PC member for ACM SIGKDD 2022. </li>
+	    <li type="circle">[11/2021] I will serve as a adjunct lecturer in the deparment of Information Science at UAlbany for Spring 2022. </li>
 	    <li type="circle">[10/2021] I was nominated to serve as a PC member for AAAI 2022.</li>
 	    <li type="circle">[10/2021] I was nominated to serve as a reviewer for WACV 2022 Workshop on DNOW.</li>
 	    <li type="circle">[10/2021] One paper was accepted by NeurIPS 2021 Workshop on Meta-Learning.</li>
 	    <li type="circle">[09/2021] I was nominated to serve as a reviewer for NeurIPS 2021 Workshop on Meta-Learning .</li>
 	    <li type="circle">[09/2021] I was nominated to serve as a PC member for SDM 2022. </li>
 	    <li type="circle">[09/2021] I was nominated to serve as a PC member for IEEE BigData 2021.</li>
-		<li type="circle">[08/2021] I was nominated to serve as a PC member for WSDM 2022. </li>
-		<li type="circle">[08/09/2021] I was officially hooded as a Ph.D.</li>
-		<li type="circle">[07/05/2021] I successfully passed my doctoral defense!</li>
-		<li type="circle">[06/2021] I was nominated to serve as a PC member for ICDM 2021. </li>
-		<li type="circle">[05/2021] One paper was accepted by ACM SIGKDD 2021. </li>
-		<li type="circle">[02/2021] One paper was accepted by ICBC 2021.</li>
-		<li type="circle">[01/2021] One paper was accepted by WWW 2021.</li>
-		<li type="circle">[08/2020] One paper was accepted by ICDM 2020.</li>
+	    <li type="circle">[08/2021] I was nominated to serve as a PC member for WSDM 2022. </li>
+	    <li type="circle">[08/09/2021] I was officially hooded as a Ph.D.</li>
+	    <li type="circle">[07/05/2021] I successfully passed my doctoral defense!</li>
+	    <li type="circle">[06/2021] I was nominated to serve as a PC member for ICDM 2021. </li>
+	    <li type="circle">[05/2021] One paper was accepted by ACM SIGKDD 2021. </li>
+	    <li type="circle">[02/2021] One paper was accepted by ICBC 2021.</li>
+	    <li type="circle">[01/2021] One paper was accepted by WWW 2021.</li>
+	    <li type="circle">[08/2020] One paper was accepted by ICDM 2020.</li>
     </ul><br>
 
 
