--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <ul>
 	    <li type="circle">[12/2021] One paper was accepted by AAAI 2022. </li>
 	    <li type="circle">[11/2021] I was nominated to serve as a PC member for ACM SIGKDD 2022. </li>
-	    <li type="circle">[11/2021] I will serve as a adjunct lecturer in the deparment of Information Science at UAlbany for Spring 2022. </li>
+	    <li type="circle">[11/2021] I will serve as an adjunct lecturer in the deparment of Information Science at UAlbany for Spring 2022. </li>
 	    <li type="circle">[10/2021] I was nominated to serve as a PC member for AAAI 2022.</li>
 	    <li type="circle">[10/2021] I was nominated to serve as a reviewer for WACV 2022 Workshop on DNOW.</li>
 	    <li type="circle">[10/2021] One paper was accepted by NeurIPS 2021 Workshop on Meta-Learning.</li>
