--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
 	</ul>
   <h3>Journal Reviewer</h3>
     <ul>
+	<li type="disc"> Journal of Frontiers in Big Data 2022. </li>
 	<li type="disc"> Journal of Big Data Research (JBDR) 2020. </li>
 	</ul>
 
