--- a/index.html
+++ b/index.html
@@ -138,126 +138,116 @@
   </div>
 
   <div class="publication row clearfix">
-		<div class="row-media" style="background-image: url(files/pubs/icbc_2021.jpg);"></div>
-		<div class="row-text">
-			VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning<br/>
-			Feng Mi, Zhuoyi Wang, <span class="bold">Chen Zhao</span>, Jinghui Guo, Fawaz Ahmed, Latifur Khan<br/>
-			<span class="italic">In Proceedings of the IEEE International Conference on Blockchain and Cryptocurrency (<strong>ICBC</strong>), 2021</span><br/>
-			<a class="btn btn-red" href="https://ieeexplore.ieee.org/document/9461050">arXiv</a> 
-		</div>
+	<div class="row-media" style="background-image: url(files/pubs/icbc_2021.jpg);"></div>
+	<div class="row-text">
+		VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning<br/>
+		Feng Mi, Zhuoyi Wang, <span class="bold">Chen Zhao</span>, Jinghui Guo, Fawaz Ahmed, Latifur Khan<br/>
+		<span class="italic">In Proceedings of the IEEE International Conference on Blockchain and Cryptocurrency (<strong>ICBC</strong>), 2021</span><br/>
+		<a class="btn btn-red" href="https://ieeexplore.ieee.org/document/9461050">arXiv</a> 
+	</div>
   </div>
 
   <div class="publication row clearfix">
-		<div class="row-media" style="background-image: url(files/pubs/www_2021.png);"></div>
-		<div class="row-text">
-			CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining<br/>
-			Zhuoyi Wang, Yuqiao Chen, <span class="bold">Chen Zhao</span>, Hemeng Tao, Yu Lin, Xujiang Zhao, Yigong Wang and Latifur Khan<br/>
-			<span class="italic">In Proceedings of the ACM International World Wide Web Conference (<strong>WWW</strong>), 2021</span><br/>
-			<a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">arXiv</a> 
-		</div>
+	<div class="row-media" style="background-image: url(files/pubs/www_2021.png);"></div>
+	<div class="row-text">
+		CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining<br/>
+		Zhuoyi Wang, Yuqiao Chen, <span class="bold">Chen Zhao</span>, Hemeng Tao, Yu Lin, Xujiang Zhao, Yigong Wang and Latifur Khan<br/>
+		<span class="italic">In Proceedings of the ACM International World Wide Web Conference (<strong>WWW</strong>), 2021</span><br/>
+		<a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">arXiv</a> 
+	</div>
   </div>
 
   <div class="publication row clearfix">
-		<div class="row-media" style="background-image: url(files/pubs/icdm_2020.png);"></div>
-		<div class="row-text">
-			PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning<br/>
-			<span class="bold">Chen Zhao</span>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
-			<span class="italic">preprint, 2020</span><br/>
-			<a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v2">arXiv</a>
-		</div>
+	<div class="row-media" style="background-image: url(files/pubs/icdm_2020.png);"></div>
+	<div class="row-text">
+		PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning<br/>
+		<span class="bold">Chen Zhao</span>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
+		<span class="italic">preprint, 2020</span><br/>
+		<a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v2">arXiv</a>
+	</div>
   </div>
 
   <div class="publication row clearfix">
-		<div class="row-media" style="background-image: url(files/pubs/icdm_2020.png);"></div>
-		<div class="row-text">
-			A Primal-Dual Subgradient Approach for Fair Meta Learning<br/>
-			<span class="bold">Chen Zhao</span>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
-			<span class="italic">In Proceedings of the IEEE International Conference on Data Mining (<strong>ICDM</strong>), 2020</span><br/>
-			<a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">arXiv</a>
-		</div>
+	<div class="row-media" style="background-image: url(files/pubs/icdm_2020.png);"></div>
+	<div class="row-text">
+		A Primal-Dual Subgradient Approach for Fair Meta Learning<br/>
+		<span class="bold">Chen Zhao</span>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
+		<span class="italic">In Proceedings of the IEEE International Conference on Data Mining (<strong>ICDM</strong>), 2020</span><br/>
+		<a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">arXiv</a>
+	</div>
   </div>
 
   <div class="publication row clearfix">
-		<div class="row-media" style="background-image: url(files/pubs/ickg2_2020.png);"></div>
-		<div class="row-text">
-			Fair Meta-Learning for Few-Shot Classification<br/>
-			<span class="bold">Chen Zhao</span>, Changbin Li, Jincheng Li, Feng Chen<br/>
-			<span class="italic">In Proceedings of the IEEE International Conference on Knowledge Graph (<strong>ICKG</strong>), 2020</span><br/>
-			<a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">arXiv</a> 
-		</div>
+	<div class="row-media" style="background-image: url(files/pubs/ickg2_2020.png);"></div>
+	<div class="row-text">
+		Fair Meta-Learning for Few-Shot Classification<br/>
+		<span class="bold">Chen Zhao</span>, Changbin Li, Jincheng Li, Feng Chen<br/>
+		<span class="italic">In Proceedings of the IEEE International Conference on Knowledge Graph (<strong>ICKG</strong>), 2020</span><br/>
+		<a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">arXiv</a> 
+	</div>
   </div>
 
   <div class="publication row clearfix">
-		<div class="row-media" style="background-image: url(files/pubs/ickg1_2020.png);"></div>
-		<div class="row-text">
-			Unfairness Discovery and Prevention for Few-Shot Regression<br/>
-			<span class="bold">Chen Zhao</span>, Feng Chen<br/>
-			<span class="italic">In Proceedings of the IEEE International Conference on Knowledge Graph (<strong>ICKG</strong>), 2020</span><br/>
-			<a class="btn btn-red" href="https://arxiv.org/abs/2009.11406">arXiv</a> 
-		</div>
+	<div class="row-media" style="background-image: url(files/pubs/ickg1_2020.png);"></div>
+	<div class="row-text">
+		Unfairness Discovery and Prevention for Few-Shot Regression<br/>
+		<span class="bold">Chen Zhao</span>, Feng Chen<br/>
+		<span class="italic">In Proceedings of the IEEE International Conference on Knowledge Graph (<strong>ICKG</strong>), 2020</span><br/>
+		<a class="btn btn-red" href="https://arxiv.org/abs/2009.11406">arXiv</a> 
+	</div>
   </div>
 
   <div class="publication row clearfix">
-		<div class="row-media" style="background-image: url(files/pubs/icdm_2019.png);"></div>
-		<div class="row-text">
-			Rank-Based Multi-task Learning for Fair Regression<br/>
-			<span class="bold">Chen Zhao</span>, Feng Chen<br/>
-			<span class="italic">In Proceedings of the IEEE International Conference on Data Mining (<strong>ICDM</strong>), 2019</span><br/>
-			<a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">arXiv</a>
-		</div>
+	<div class="row-media" style="background-image: url(files/pubs/icdm_2019.png);"></div>
+	<div class="row-text">
+		Rank-Based Multi-task Learning for Fair Regression<br/>
+		<span class="bold">Chen Zhao</span>, Feng Chen<br/>
+		<span class="italic">In Proceedings of the IEEE International Conference on Data Mining (<strong>ICDM</strong>), 2019</span><br/>
+		<a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">arXiv</a>
+	</div>
   </div>
 
   <div class="publication row clearfix">
-		<div class="row-media" style="background-image: url(files/pubs/development_2017.png);"></div>
-		<div class="row-text">
-			CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane<br/>
-			Jingjing Li, Lianjie Miao, <span class="bold">Chen Zhao</span>, Wasay Mohiuddin Shaikh Qureshi, David Shieh, Hua Guo, Yangyang Lu, Saiyang Hu, Alice Huang, Lu Zhang, Chen-leng Cai, Leo Q. Wan, Hongbo Xin, Peter Vincent, Harold A. Singer, Yi Zheng, Ondine Cleaver, Zhen-Chuan Fan, Mingfu Wu<br/>
-			<span class="italic">Development, 147-173, 2017</span><br/>
-			<a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">arXiv</a>
-		</div>
+	<div class="row-media" style="background-image: url(files/pubs/development_2017.png);"></div>
+	<div class="row-text">
+		CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane<br/>
+		Jingjing Li, Lianjie Miao, <span class="bold">Chen Zhao</span>, Wasay Mohiuddin Shaikh Qureshi, David Shieh, Hua Guo, Yangyang Lu, Saiyang Hu, Alice Huang, Lu Zhang, Chen-leng Cai, Leo Q. Wan, Hongbo Xin, Peter Vincent, Harold A. Singer, Yi Zheng, Ondine Cleaver, Zhen-Chuan Fan, Mingfu Wu<br/>
+		<span class="italic">Development, 147-173, 2017</span><br/>
+		<a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">arXiv</a>
+	</div>
   </div>
 
   <div class="publication row clearfix">
-		<div class="row-media" style="background-image: url(files/pubs/development_2014.png);"></div>
-		<div class="row-text">
-			Numb family proteins are essential for cardiac morphogenesis and progenitor differentiation<br/>
-			<span class="bold">Chen Zhao</span>, Hua Guo, Jingjing Li, Thomas Myint, William Pittman, Le Yang, Weimin Zhong, Robert J. Schwartz, John J. Schwarz, Harold A. Singer, Michelle D. Tallquist, Mingfu Wu<br/>
-			<span class="italic">Development, 141(2):281-95, 2014</span><br/>
-			<a class="btn btn-red" href="https://journals.biologists.com/dev/article/141/2/281/46425/Numb-family-proteins-are-essential-for-cardiac">arXiv</a>
-		</div>
+	<div class="row-media" style="background-image: url(files/pubs/development_2014.png);"></div>
+	<div class="row-text">
+		Numb family proteins are essential for cardiac morphogenesis and progenitor differentiation<br/>
+		<span class="bold">Chen Zhao</span>, Hua Guo, Jingjing Li, Thomas Myint, William Pittman, Le Yang, Weimin Zhong, Robert J. Schwartz, John J. Schwarz, Harold A. Singer, Michelle D. Tallquist, Mingfu Wu<br/>
+		<span class="italic">Development, 141(2):281-95, 2014</span><br/>
+		<a class="btn btn-red" href="https://journals.biologists.com/dev/article/141/2/281/46425/Numb-family-proteins-are-essential-for-cardiac">arXiv</a>
+	</div>
   </div>
-
-
-<h2>Awards & Honors</h2>
-    <ul>
-	<li type="disc"> <strong>Dissertation Research Award</strong>, $1,224, The University of Texas at Dallas, 2021-2022. </li>
-	<li type="disc"> <strong>Student Travel Award</strong>, IEEE International Conference on Data Mining (ICDM), U.S. National Science Foundation, 2020. </li>
-  <li type="disc"> <strong>First Prize in the 11th "Challenge Cup" National Undergraduate Academic Science and Technology</strong>, Tianjin Municipal Education Commission, Top 5% among all works in Tianjin City, 2011. </li>
-    </ul>
-
 	
 
 <h2>Academic Services</h2>
   <h3>Conference Reviewer</h3>
-    <ul>
-	<li type="disc"> ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
-	<li type="disc"> AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
-	<li type="disc"> WACV 2022 Workshop on DNOW (WACV-w) 2022.</li>
-	<li type="disc"> SIAM International Conference on Data Mining  (SDM) 2022.</li>
-	<li type="disc"> International Conference on Web Search and Data Mining (WSDM) 2022.</li>
-	<li type="disc"> NeurIPS 2021 Workshop on Meta-Learning (NeurIPS-w) 2021.</li>
-	<li type="disc"> IEEE International Conference on Big Data (BigData) 2021.</li>
-	<li type="disc"> IEEE International Conference on Data Mining (ICDM) 2021.</li>
-	<li type="disc"> International Conference on Artificial Intelligence and Statistics (AISTATS) 2021.</li>
+    	<ul>
+		<li type="disc"> ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
+		<li type="disc"> AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
+		<li type="disc"> WACV 2022 Workshop on DNOW (WACV-w) 2022.</li>
+		<li type="disc"> SIAM International Conference on Data Mining  (SDM) 2022.</li>
+		<li type="disc"> International Conference on Web Search and Data Mining (WSDM) 2022.</li>
+		<li type="disc"> NeurIPS 2021 Workshop on Meta-Learning (NeurIPS-w) 2021.</li>
+		<li type="disc"> IEEE International Conference on Big Data (BigData) 2021.</li>
+		<li type="disc"> IEEE International Conference on Data Mining (ICDM) 2021.</li>
+		<li type="disc"> International Conference on Artificial Intelligence and Statistics (AISTATS) 2021.</li>
 	</ul>
   <h3>Journal Reviewer</h3>
-    <ul>
-	<li type="disc"> Journal of Frontiers in Big Data 2022. </li>
-	<li type="disc"> Journal of Big Data Research (JBDR) 2020. </li>
+    	<ul>
+		<li type="disc"> Journal of Frontiers in Big Data 2022. </li>
+		<li type="disc"> Journal of Big Data Research (JBDR) 2020. </li>
 	</ul>
 
-
- <h2>Academic Talks</h2>
+<h2>Academic Talks</h2>
 	<ul>
 		<li type="disc">11/2021: Tsinghua University AI TIME, Beijing,China (Invited talk, Virtual).</li>
 		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore (Virtual).</li>
@@ -269,6 +259,14 @@
 		<li type="disc">10/2013: North American Vascular Biology Organization (NAVBO) Conference, Hyannis MA, USA (poster).</li>
 	</ul>
 <hr>
+	
+<h2>Awards & Honors</h2>
+    <ul>
+	<li type="disc"> Dissertation Research Award, $1,224, The University of Texas at Dallas, 2021-2022. </li>
+	<li type="disc"> Student Travel Award, IEEE International Conference on Data Mining (ICDM), U.S. National Science Foundation, 2020. </li>
+  	<li type="disc"> First Prize in the 11th "Challenge Cup" National Undergraduate Academic Science and Technology, Tianjin Municipal Education Commission, Top 5% among all works in Tianjin City, 2011. </li>
+    </ul>
+	
 
 <table cellpadding="0px">
 	<tbody>
