--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
 
 <h2>Publications</h2>
 
+<p><b>Tight Concentrations and Confidence Sequences from the Regret of Universal Portfolio</b>.</br>
+Francesco Orabona, <font color=a92b13>Kwang-Sung Jun</font>.</br> 
+ArXiv preprint 2110.14099, 2021.
+<a href="https://arxiv.org/abs/2110.14099" target=&ldquo;blank&rdquo;>[arxiv]</a></p>
+
   <div class="publication row clearfix">
   	<div class="row-media" style="background-image: url(files/pubs/nips_w_2021.png);"></div>
   	<div class="row-text">
