--- a/index.html
+++ b/index.html
@@ -116,12 +116,15 @@
 
 <h2>Publications</h2>
 
-<p><b>Tight Concentrations and Confidence Sequences from the Regret of Universal Portfolio</b>.</br>
-Francesco Orabona, <font color=a92b13>Kwang-Sung Jun</font>.</br> 
-ArXiv preprint 2110.14099, 2021.
-<a href="https://arxiv.org/abs/2110.14099" target=&ldquo;blank&rdquo;>[arxiv]</a></p>
+<p>
+	<b>A Nested Bi-level Optimization Framework for Robust Few-Shot Learning.</b></br>
+	Krishnateja Killamsetty, Changbin Li, <font color=a92b13>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
+	AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2022 <strong>and</strong> <br/> 
+	NeurIPS Workshop on MetaLearn (<strong>NeurIPS-w</strong>), 2021 <br/>
+  	<a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">arXiv</a>
+</p>
 
-  <div class="publication row clearfix">
+<!--   <div class="publication row clearfix">
   	<div class="row-media" style="background-image: url(files/pubs/nips_w_2021.png);"></div>
   	<div class="row-text">
   		A Nested Bi-level Optimization Framework for Robust Few-Shot Learning<br/>
@@ -130,7 +133,7 @@ ArXiv preprint 2110.14099, 2021.
 		NeurIPS Workshop on MetaLearn (<strong>NeurIPS-w</strong>), 2021 <br/>
   		<a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">arXiv</a>
   	</div>
-  </div>
+  </div> -->
 
   <div class="publication row clearfix">
   	<div class="row-media" style="background-image: url(files/pubs/kdd_2021.png);"></div>
