--- a/index.html
+++ b/index.html
@@ -120,120 +120,80 @@
 	<b>A Nested Bi-level Optimization Framework for Robust Few-Shot Learning.</b></br>
 	Krishnateja Killamsetty, Changbin Li, <font color=a92b13>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
 	AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2022 <strong>and</strong> <br/> 
-	NeurIPS Workshop on MetaLearn (<strong>NeurIPS-w</strong>), 2021 <br/>
+	NeurIPS Workshop on MetaLearn (<strong>NeurIPS-w</strong>), 2021
   	<a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">arXiv</a>
 </p>
 
-<!--   <div class="publication row clearfix">
-  	<div class="row-media" style="background-image: url(files/pubs/nips_w_2021.png);"></div>
-  	<div class="row-text">
-  		A Nested Bi-level Optimization Framework for Robust Few-Shot Learning<br/>
-  		Krishnateja Killamsetty, Changbin Li, <span class="bold">Chen Zhao</span>, Rishabh Krishnan Iyer, Feng Chen<br/>
-  		AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2022 <strong>and</strong> <br/> 
-		NeurIPS Workshop on MetaLearn (<strong>NeurIPS-w</strong>), 2021 <br/>
-  		<a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">arXiv</a>
-  	</div>
-  </div> -->
+<p>
+	<b>Fairness-Aware Online Meta-learning.</b></br>
+	<font color=a92b13>Chen Zhao</font>, Feng Chen, Bhavani Thuraisingham<br/>
+	In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining (<span class="bold">KDD</span>), 2021
+  	<a class="btn btn-red" href="https://arxiv.org/abs/2108.09435">arXiv</a>
+</p>
 
-  <div class="publication row clearfix">
-  	<div class="row-media" style="background-image: url(files/pubs/kdd_2021.png);"></div>
-  	<div class="row-text">
-  		Fairness-Aware Online Meta-learning<br/>
-  		<span class="bold">Chen Zhao</span>, Feng Chen, Bhavani Thuraisingham<br/>
-  		In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining (<span class="bold">KDD</span>), 2021<br/>
-  		<a class="btn btn-red" href="https://arxiv.org/abs/2108.09435">arXiv</a>
-  	</div>
-  </div>
+<p>
+	<b>VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning.</b></br>
+	Feng Mi, Zhuoyi Wang, <font color=a92b13>Chen Zhao</font>, Jinghui Guo, Fawaz Ahmed, Latifur Khan<br/>
+	In Proceedings of the IEEE International Conference on Blockchain and Cryptocurrency (<strong>ICBC</strong>), 2021
+  	<a class="btn btn-red" href="https://ieeexplore.ieee.org/document/9461050">arXiv</a>
+</p>
 
-  <div class="publication row clearfix">
-	<div class="row-media" style="background-image: url(files/pubs/icbc_2021.jpg);"></div>
-	<div class="row-text">
-		VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning<br/>
-		Feng Mi, Zhuoyi Wang, <span class="bold">Chen Zhao</span>, Jinghui Guo, Fawaz Ahmed, Latifur Khan<br/>
-		<span class="italic">In Proceedings of the IEEE International Conference on Blockchain and Cryptocurrency (<strong>ICBC</strong>), 2021</span><br/>
-		<a class="btn btn-red" href="https://ieeexplore.ieee.org/document/9461050">arXiv</a> 
-	</div>
-  </div>
+<p>
+	<b>CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining.</b></br>
+	Zhuoyi Wang, Yuqiao Chen, <font color=a92b13>Chen Zhao</font>, Hemeng Tao, Yu Lin, Xujiang Zhao, Yigong Wang and Latifur Khan<br/>
+	In Proceedings of the ACM International World Wide Web Conference (<strong>WWW</strong>), 2021
+  	<a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">arXiv</a> 
+</p>
 
-  <div class="publication row clearfix">
-	<div class="row-media" style="background-image: url(files/pubs/www_2021.png);"></div>
-	<div class="row-text">
-		CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining<br/>
-		Zhuoyi Wang, Yuqiao Chen, <span class="bold">Chen Zhao</span>, Hemeng Tao, Yu Lin, Xujiang Zhao, Yigong Wang and Latifur Khan<br/>
-		<span class="italic">In Proceedings of the ACM International World Wide Web Conference (<strong>WWW</strong>), 2021</span><br/>
-		<a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">arXiv</a> 
-	</div>
-  </div>
+<p>
+	<b>PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning.</b></br>
+	<font color=a92b13>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
+	ArXiv preprint, 2009.12675v2, 2020
+  	<a class="btn btn-red" href="https://arxiv.org/pdf/2009.12675v2.pdf">arXiv</a>
+</p>
 
-  <div class="publication row clearfix">
-	<div class="row-media" style="background-image: url(files/pubs/icdm_2020.png);"></div>
-	<div class="row-text">
-		PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning<br/>
-		<span class="bold">Chen Zhao</span>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
-		<span class="italic">preprint, 2020</span><br/>
-		<a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v2">arXiv</a>
-	</div>
-  </div>
+<p>
+	<b>A Primal-Dual Subgradient Approach for Fair Meta Learning.</b></br>
+	<font color=a92b13>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
+	In Proceedings of the IEEE International Conference on Data Mining (<strong>ICDM</strong>), 2020
+  	<a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">arXiv</a>
+</p>
 
-  <div class="publication row clearfix">
-	<div class="row-media" style="background-image: url(files/pubs/icdm_2020.png);"></div>
-	<div class="row-text">
-		A Primal-Dual Subgradient Approach for Fair Meta Learning<br/>
-		<span class="bold">Chen Zhao</span>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
-		<span class="italic">In Proceedings of the IEEE International Conference on Data Mining (<strong>ICDM</strong>), 2020</span><br/>
-		<a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">arXiv</a>
-	</div>
-  </div>
+<p>
+	<b>Fair Meta-Learning for Few-Shot Classification.</b></br>
+	<font color=a92b13>Chen Zhao</font>, Changbin Li, Jincheng Li, Feng Chen<br/>
+	In Proceedings of the IEEE International Conference on Knowledge Graph (<strong>ICKG</strong>), 2020
+  	<a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">arXiv</a> 
+</p>
 
-  <div class="publication row clearfix">
-	<div class="row-media" style="background-image: url(files/pubs/ickg2_2020.png);"></div>
-	<div class="row-text">
-		Fair Meta-Learning for Few-Shot Classification<br/>
-		<span class="bold">Chen Zhao</span>, Changbin Li, Jincheng Li, Feng Chen<br/>
-		<span class="italic">In Proceedings of the IEEE International Conference on Knowledge Graph (<strong>ICKG</strong>), 2020</span><br/>
-		<a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">arXiv</a> 
-	</div>
-  </div>
+<p>
+	<b>Unfairness Discovery and Prevention for Few-Shot Regression.</b></br>
+	<font color=a92b13>Chen Zhao</font>, Feng Chen<br/>
+	In Proceedings of the IEEE International Conference on Knowledge Graph (<strong>ICKG</strong>), 2020
+  	<a class="btn btn-red" href="https://arxiv.org/abs/2009.11406">arXiv</a> 
+</p>
 
-  <div class="publication row clearfix">
-	<div class="row-media" style="background-image: url(files/pubs/ickg1_2020.png);"></div>
-	<div class="row-text">
-		Unfairness Discovery and Prevention for Few-Shot Regression<br/>
-		<span class="bold">Chen Zhao</span>, Feng Chen<br/>
-		<span class="italic">In Proceedings of the IEEE International Conference on Knowledge Graph (<strong>ICKG</strong>), 2020</span><br/>
-		<a class="btn btn-red" href="https://arxiv.org/abs/2009.11406">arXiv</a> 
-	</div>
-  </div>
+<p>
+	<b>Rank-Based Multi-task Learning for Fair Regression.</b></br>
+	<font color=a92b13>Chen Zhao</font>, Feng Chen<br/>
+	In Proceedings of the IEEE International Conference on Data Mining (<strong>ICDM</strong>), 2019
+  	<a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">arXiv</a>
+</p>
 
-  <div class="publication row clearfix">
-	<div class="row-media" style="background-image: url(files/pubs/icdm_2019.png);"></div>
-	<div class="row-text">
-		Rank-Based Multi-task Learning for Fair Regression<br/>
-		<span class="bold">Chen Zhao</span>, Feng Chen<br/>
-		<span class="italic">In Proceedings of the IEEE International Conference on Data Mining (<strong>ICDM</strong>), 2019</span><br/>
-		<a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">arXiv</a>
-	</div>
-  </div>
+<p>
+	<b>CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane.</b></br>
+	Jingjing Li, Lianjie Miao, <font color=a92b13>Chen Zhao</font>, Wasay Mohiuddin Shaikh Qureshi, David Shieh, Hua Guo, Yangyang Lu, Saiyang Hu, Alice Huang, Lu Zhang, Chen-leng Cai, Leo Q. Wan, Hongbo Xin, Peter Vincent, Harold A. Singer, Yi Zheng, Ondine Cleaver, Zhen-Chuan Fan, Mingfu Wu<br/>
+	<strong>Development</strong>, 147-173, 2017 
+  	<a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">arXiv</a>
+</p>
 
-  <div class="publication row clearfix">
-	<div class="row-media" style="background-image: url(files/pubs/development_2017.png);"></div>
-	<div class="row-text">
-		CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane<br/>
-		Jingjing Li, Lianjie Miao, <span class="bold">Chen Zhao</span>, Wasay Mohiuddin Shaikh Qureshi, David Shieh, Hua Guo, Yangyang Lu, Saiyang Hu, Alice Huang, Lu Zhang, Chen-leng Cai, Leo Q. Wan, Hongbo Xin, Peter Vincent, Harold A. Singer, Yi Zheng, Ondine Cleaver, Zhen-Chuan Fan, Mingfu Wu<br/>
-		<span class="italic">Development, 147-173, 2017</span><br/>
-		<a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">arXiv</a>
-	</div>
-  </div>
+<p>
+	<b>Numb family proteins are essential for cardiac morphogenesis and progenitor differentiation.</b></br>
+	<font color=a92b13>Chen Zhao</font>, Hua Guo, Jingjing Li, Thomas Myint, William Pittman, Le Yang, Weimin Zhong, Robert J. Schwartz, John J. Schwarz, Harold A. Singer, Michelle D. Tallquist, Mingfu Wu<br/>
+	<strong>Development</strong>, 141(2):281-95, 2014
+  	<a class="btn btn-red" href="https://journals.biologists.com/dev/article/141/2/281/46425/Numb-family-proteins-are-essential-for-cardiac">arXiv</a>
+</p>
 
-  <div class="publication row clearfix">
-	<div class="row-media" style="background-image: url(files/pubs/development_2014.png);"></div>
-	<div class="row-text">
-		Numb family proteins are essential for cardiac morphogenesis and progenitor differentiation<br/>
-		<span class="bold">Chen Zhao</span>, Hua Guo, Jingjing Li, Thomas Myint, William Pittman, Le Yang, Weimin Zhong, Robert J. Schwartz, John J. Schwarz, Harold A. Singer, Michelle D. Tallquist, Mingfu Wu<br/>
-		<span class="italic">Development, 141(2):281-95, 2014</span><br/>
-		<a class="btn btn-red" href="https://journals.biologists.com/dev/article/141/2/281/46425/Numb-family-proteins-are-essential-for-cardiac">arXiv</a>
-	</div>
-  </div>
 	
 
 <h2>Academic Services</h2>
