--- a/index.html
+++ b/index.html
@@ -117,11 +117,10 @@
 <h2>Publications</h2>
 
 <p>
-	<b>A Nested Bi-level Optimization Framework for Robust Few-Shot Learning.</b></br>
+	<b>A Nested Bi-level Optimization Framework for Robust Few-Shot Learning.</b><a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">arXiv</a></br>
 	Krishnateja Killamsetty, Changbin Li, <font color=a92b13>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
-	AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2022 <strong>and</strong> <br/> 
-	NeurIPS Workshop on MetaLearn (<strong>NeurIPS-w</strong>), 2021
-  	<a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">arXiv</a>
+	<em>AAAI Conference on Artificial Intelligence</em> (<strong>AAAI</strong>), 2022 <em>and</em> <br/> 
+	<em>NeurIPS Workshop on MetaLearn</em> (<strong>NeurIPS-w</strong>), 2021
 </p>
 
 <p>
