--- a/index.html
+++ b/index.html
@@ -117,80 +117,70 @@
 <h2>Publications</h2>
 
 <p>
-	<b>A Nested Bi-level Optimization Framework for Robust Few-Shot Learning.</b><a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">arXiv</a></br>
+	<b>A Nested Bi-level Optimization Framework for Robust Few-Shot Learning.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">arXiv</a></br>
 	Krishnateja Killamsetty, Changbin Li, <font color=a92b13>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
-	<em>AAAI Conference on Artificial Intelligence</em> (<strong>AAAI</strong>), 2022 <em>and</em> <br/> 
+	<em>AAAI Conference on Artificial Intelligence</em> (<strong>AAAI</strong>), 2022, <em>and</em> <br/> 
 	<em>NeurIPS Workshop on MetaLearn</em> (<strong>NeurIPS-w</strong>), 2021
 </p>
 
 <p>
-	<b>Fairness-Aware Online Meta-learning.</b></br>
+	<b>Fairness-Aware Online Meta-learning.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2108.09435">arXiv</a></br>
 	<font color=a92b13>Chen Zhao</font>, Feng Chen, Bhavani Thuraisingham<br/>
-	In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining (<span class="bold">KDD</span>), 2021
-  	<a class="btn btn-red" href="https://arxiv.org/abs/2108.09435">arXiv</a>
+	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>KDD</strong>), 2021
 </p>
 
 <p>
-	<b>VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning.</b></br>
+	<b>VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning.</b> <a class="btn btn-red" href="https://ieeexplore.ieee.org/document/9461050">arXiv</a></br>
 	Feng Mi, Zhuoyi Wang, <font color=a92b13>Chen Zhao</font>, Jinghui Guo, Fawaz Ahmed, Latifur Khan<br/>
-	In Proceedings of the IEEE International Conference on Blockchain and Cryptocurrency (<strong>ICBC</strong>), 2021
-  	<a class="btn btn-red" href="https://ieeexplore.ieee.org/document/9461050">arXiv</a>
+	<em>In Proceedings of the IEEE International Conference on Blockchain and Cryptocurrency</em> (<strong>ICBC</strong>), 2021
 </p>
 
 <p>
-	<b>CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining.</b></br>
+	<b>CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining.</b> <a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">arXiv</a> </br>
 	Zhuoyi Wang, Yuqiao Chen, <font color=a92b13>Chen Zhao</font>, Hemeng Tao, Yu Lin, Xujiang Zhao, Yigong Wang and Latifur Khan<br/>
-	In Proceedings of the ACM International World Wide Web Conference (<strong>WWW</strong>), 2021
-  	<a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">arXiv</a> 
+	<em>In Proceedings of the ACM International World Wide Web Conference</em> (<strong>WWW</strong>), 2021
 </p>
 
 <p>
-	<b>PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning.</b></br>
+	<b>PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning.</b> <a class="btn btn-red" href="https://arxiv.org/pdf/2009.12675v2.pdf">arXiv</a></br>
 	<font color=a92b13>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
-	ArXiv preprint, 2009.12675v2, 2020
-  	<a class="btn btn-red" href="https://arxiv.org/pdf/2009.12675v2.pdf">arXiv</a>
+	<em>ArXiv preprint, 2009.12675v2</em>, 2020
 </p>
 
 <p>
-	<b>A Primal-Dual Subgradient Approach for Fair Meta Learning.</b></br>
+	<b>A Primal-Dual Subgradient Approach for Fair Meta Learning.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">arXiv</a></br>
 	<font color=a92b13>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
-	In Proceedings of the IEEE International Conference on Data Mining (<strong>ICDM</strong>), 2020
-  	<a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">arXiv</a>
+	<em>In Proceedings of the IEEE International Conference on Data Mining</em> (<strong>ICDM</strong>), 2020
 </p>
 
 <p>
-	<b>Fair Meta-Learning for Few-Shot Classification.</b></br>
+	<b>Fair Meta-Learning for Few-Shot Classification.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">arXiv</a></br>
 	<font color=a92b13>Chen Zhao</font>, Changbin Li, Jincheng Li, Feng Chen<br/>
-	In Proceedings of the IEEE International Conference on Knowledge Graph (<strong>ICKG</strong>), 2020
-  	<a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">arXiv</a> 
+	<em>In Proceedings of the IEEE International Conference on Knowledge Graph</em> (<strong>ICKG</strong>), 2020 
 </p>
 
 <p>
-	<b>Unfairness Discovery and Prevention for Few-Shot Regression.</b></br>
+	<b>Unfairness Discovery and Prevention for Few-Shot Regression.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.11406">arXiv</a></br>
 	<font color=a92b13>Chen Zhao</font>, Feng Chen<br/>
-	In Proceedings of the IEEE International Conference on Knowledge Graph (<strong>ICKG</strong>), 2020
-  	<a class="btn btn-red" href="https://arxiv.org/abs/2009.11406">arXiv</a> 
+	<em>In Proceedings of the IEEE International Conference on Knowledge Graph</em> (<strong>ICKG</strong>), 2020 
 </p>
 
 <p>
-	<b>Rank-Based Multi-task Learning for Fair Regression.</b></br>
+	<b>Rank-Based Multi-task Learning for Fair Regression.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">arXiv</a></br>
 	<font color=a92b13>Chen Zhao</font>, Feng Chen<br/>
-	In Proceedings of the IEEE International Conference on Data Mining (<strong>ICDM</strong>), 2019
-  	<a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">arXiv</a>
+	<em>In Proceedings of the IEEE International Conference on Data Mining</em> (<strong>ICDM</strong>), 2019
 </p>
 
 <p>
-	<b>CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane.</b></br>
+	<b>CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane.</b> <a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">arXiv</a></br>
 	Jingjing Li, Lianjie Miao, <font color=a92b13>Chen Zhao</font>, Wasay Mohiuddin Shaikh Qureshi, David Shieh, Hua Guo, Yangyang Lu, Saiyang Hu, Alice Huang, Lu Zhang, Chen-leng Cai, Leo Q. Wan, Hongbo Xin, Peter Vincent, Harold A. Singer, Yi Zheng, Ondine Cleaver, Zhen-Chuan Fan, Mingfu Wu<br/>
 	<strong>Development</strong>, 147-173, 2017 
-  	<a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">arXiv</a>
 </p>
 
 <p>
-	<b>Numb family proteins are essential for cardiac morphogenesis and progenitor differentiation.</b></br>
+	<b>Numb family proteins are essential for cardiac morphogenesis and progenitor differentiation.</b> <a class="btn btn-red" href="https://journals.biologists.com/dev/article/141/2/281/46425/Numb-family-proteins-are-essential-for-cardiac">arXiv</a></br>
 	<font color=a92b13>Chen Zhao</font>, Hua Guo, Jingjing Li, Thomas Myint, William Pittman, Le Yang, Weimin Zhong, Robert J. Schwartz, John J. Schwarz, Harold A. Singer, Michelle D. Tallquist, Mingfu Wu<br/>
 	<strong>Development</strong>, 141(2):281-95, 2014
-  	<a class="btn btn-red" href="https://journals.biologists.com/dev/article/141/2/281/46425/Numb-family-proteins-are-essential-for-cardiac">arXiv</a>
 </p>
 
 	
