--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	    <li type="circle">[12/2021] I will serve as an adjunct lecturer in the deparment of Computer Science at UAlbany. </li>
+	    <li type="circle">[01/2022] I was nominated to serve as a reviewer for the journal of Frontiers in Big Data. </li>
 	    <li type="circle">[12/2021] One paper was accepted by AAAI 2022. </li>
 	    <li type="circle">[11/2021] I was nominated to serve as a PC member for ACM SIGKDD 2022. </li>
 	    <li type="circle">[11/2021] I will serve as an adjunct lecturer in the deparment of Information Science at UAlbany. </li>
@@ -186,7 +186,7 @@
 	
 
 <h2>Academic Services</h2>
-  <h3>Conference Reviewer</h3>
+  <h4>Conference Reviewer</h4>
     	<ul>
 		<li type="disc"> ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
 		<li type="disc"> AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
@@ -198,7 +198,7 @@
 		<li type="disc"> IEEE International Conference on Data Mining (ICDM) 2021.</li>
 		<li type="disc"> International Conference on Artificial Intelligence and Statistics (AISTATS) 2021.</li>
 	</ul>
-  <h3>Journal Reviewer</h3>
+  <h4>Journal Reviewer</h4>
     	<ul>
 		<li type="disc"> Journal of Frontiers in Big Data 2022. </li>
 		<li type="disc"> Journal of Big Data Research (JBDR) 2020. </li>
@@ -215,6 +215,13 @@
 		<li type="disc">04/2015: Shaker High School, Latham NY, USA.</li>
 		<li type="disc">10/2013: North American Vascular Biology Organization (NAVBO) Conference, Hyannis MA, USA (poster).</li>
 	</ul>
+
+<h2>Teaching</h2>
+  <h4>The University of Texas at Dallas</h4>
+	<ul>
+		<li type="disc">Fall 2019, <strong>Co-Instructor</strong>, <a href="https://personal.utdallas.edu/~fxc190007/courses/6364/">CS 6364 Artificial Intelligence</a>. </li>
+	</ul>
+
 
 <h2>Awards & Honors</h2>
     <ul>
