--- a/index.html
+++ b/index.html
@@ -217,11 +217,26 @@
 	</ul>
 
 <h2>Teaching</h2>
+  <h4>The State University of New York at Albany</h4>
+	<ul>
+		<li type="disc">Spring 2022, <strong>Instructor</strong>, INF 428/528 Analysis, Visualization, and Prediction in Analytics. </li>
+		<li type="disc">Spring 2018, Fall 2018, Spring 2019, Teaching Assistant, ICSI 500 Operating Systems. </li>
+		<li type="disc">Fall 2017, Teaching Assistant, ICSI 518 Software Engineering. </li>
+		<li type="disc">Fall 2015, Spring 2016, Fall 2016, Teaching Assistant, ICSI 201 Introduction of Computer Science. </li>
+	</ul>
   <h4>The University of Texas at Dallas</h4>
 	<ul>
+		<li type="disc">Summer 2021, Teaching Assistant, CS 6385 Algorithmic Aspects of Telecommunication Networks. </li>
+		<li type="disc">Summer 2021, Teaching Assistant, CS 4365 Artificial Intelligence. </li>
+		<li type="disc">Summer 2021, Lab Instructor, CS 1136 Computer Science Laboratory. </li>
 		<li type="disc">Fall 2019, <strong>Co-Instructor</strong>, <a href="https://personal.utdallas.edu/~fxc190007/courses/6364/">CS 6364 Artificial Intelligence</a>. </li>
+		<li type="disc">Fall 2019, Teaching Assistant, CS 6301 Convolutional Neural Network. </li>
 	</ul>
-
+  <h4>Albany Medical College</h4>
+	<ul>
+		<li type="disc">Spring 2015, Spring 2014, Teaching Assistant, MCP 608 Cardiovascular Physiology. </li>
+		<li type="disc">Spring 2015, Spring 2014, Teaching Assistant, MCP 609 Respiratory & Renal Physiology. </li>
+	</ul>
 
 <h2>Awards & Honors</h2>
     <ul>
