--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[01/2022] One paper was accepted by PAKDD 2022. </li>
 	    <li type="circle">[01/2022] I was nominated to serve as a reviewer for the journal of Frontiers in Big Data. </li>
 	    <li type="circle">[12/2021] One paper was accepted by AAAI 2022. </li>
 	    <li type="circle">[11/2021] I was nominated to serve as a PC member for ACM SIGKDD 2022. </li>
@@ -123,6 +124,12 @@
 
 
 <h2>Publications</h2>
+	
+<p>
+	<b>Layer Adaptive Deep Neural Networks for Out-of-distribution Detection.</b> </br>
+	Haoliang Wang, <font color=a92b13>Chen Zhao</font>, Xujiang Zhao, Feng Chen<br/>
+	<em>The 26th Pacific-Asia Conference on Knowledge Discovery and Data Mining</em> (<strong>PAKDD</strong>), 2022
+</p>
 
 <p>
 	<b>A Nested Bi-level Optimization Framework for Robust Few-Shot Learning.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">arXiv</a></br>
