--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[01/2022] I was nominated to serve as a PC member for AutoML Conference 2022. </li>
 	    <li type="circle">[01/2022] One paper was accepted by PAKDD 2022. </li>
 	    <li type="circle">[01/2022] I was nominated to serve as a reviewer for the journal of Frontiers in Big Data. </li>
 	    <li type="circle">[12/2021] One paper was accepted by AAAI 2022. </li>
@@ -203,6 +204,7 @@
 <h2>Academic Services</h2>
   <h4>Conference Reviewer</h4>
     	<ul>
+		<li type="disc"> International Conference on Automated Machine Learning (AutoML) 2022.</li>
 		<li type="disc"> ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
 		<li type="disc"> AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
 		<li type="disc"> WACV 2022 Workshop on DNOW (WACV-w) 2022.</li>
