--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[02/2022] I was nominated to serve as a PC member for IEEE BigData 2022.</li>
+	    <li type="circle">[02/2022] I was nominated to serve as a TPC member for BLOCKCHAIN'22. </li>
 	    <li type="circle">[01/2022] I was nominated to serve as a PC member for AutoML Conference 2022. </li>
 	    <li type="circle">[01/2022] One paper was accepted by PAKDD 2022. </li>
 	    <li type="circle">[01/2022] I was nominated to serve as a reviewer for the journal of Frontiers in Big Data. </li>
@@ -204,6 +206,7 @@
 <h2>Academic Services</h2>
   <h4>Conference Reviewer</h4>
     	<ul>
+		<li type="disc"> 4th International Congress on Blockchain and Applications (BLOCKCHAIN) 2022.</li>
 		<li type="disc"> International Conference on Automated Machine Learning (AutoML) 2022.</li>
 		<li type="disc"> ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
 		<li type="disc"> AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
@@ -211,7 +214,7 @@
 		<li type="disc"> SIAM International Conference on Data Mining  (SDM) 2022.</li>
 		<li type="disc"> International Conference on Web Search and Data Mining (WSDM) 2022.</li>
 		<li type="disc"> NeurIPS 2021 Workshop on Meta-Learning (NeurIPS-w) 2021.</li>
-		<li type="disc"> IEEE International Conference on Big Data (BigData) 2021.</li>
+		<li type="disc"> IEEE International Conference on Big Data (BigData) 2021, 2022.</li>
 		<li type="disc"> IEEE International Conference on Data Mining (ICDM) 2021.</li>
 		<li type="disc"> International Conference on Artificial Intelligence and Statistics (AISTATS) 2021.</li>
 	</ul>
