--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 <h2>Academic Services</h2>
   <h4>Conference Reviewer</h4>
     	<ul>
-		<li type="disc"> 4th International Congress on Blockchain and Applications (BLOCKCHAIN) 2022.</li>
+		<li type="disc"> International Congress on Blockchain and Applications (BLOCKCHAIN) 2022.</li>
 		<li type="disc"> International Conference on Automated Machine Learning (AutoML) 2022.</li>
 		<li type="disc"> ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
 		<li type="disc"> AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
