--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
 <h2>Teaching</h2>
   <h4>The State University of New York at Albany</h4>
 	<ul>
+		<li type="disc">Spring 2022, <font color=a92b13>Instructor</font>, INF 108 Programming for Problem Solving. </li>
 		<li type="disc">Spring 2022, <font color=a92b13>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-inf-428-528/">INF 428/528 Analysis, Visualization, and Prediction in Analytics</a>. </li>
 		<li type="disc">Spring 2018, Fall 2018, Spring 2019, Teaching Assistant, ICSI 500 Operating Systems. </li>
 		<li type="disc">Fall 2017, Teaching Assistant, ICSI 518 Software Engineering. </li>
