--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
   <h4>Journal Reviewer</h4>
     	<ul>
 		<li type="disc"> Journal of Frontiers in Big Data 2022. </li>
+		<li type="disc"> Environment and Planning B: Urban Analytics and City Science 2022. </li>
 		<li type="disc"> Journal of Big Data Research (JBDR) 2020. </li>
 	</ul>
 
