--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <h2>Publications</h2>
 	
 <p>
-	<b>Layer Adaptive Deep Neural Networks for Out-of-distribution Detection.</b> </br>
+	<b>Layer Adaptive Deep Neural Networks for Out-of-distribution Detection.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2203.00192">PDF</a></br>
 	Haoliang Wang, <font color=a92b13>Chen Zhao</font>, Xujiang Zhao, Feng Chen<br/>
 	<em>The 26th Pacific-Asia Conference on Knowledge Discovery and Data Mining</em> (<strong>PAKDD</strong>), 2022
 </p>
