--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[03/2022] I was nominated to serve as a PC member for IEEE ICDM 2022.</li>
 	    <li type="circle">[02/2022] I was nominated to serve as a PC member for IEEE BigData 2022.</li>
 	    <li type="circle">[02/2022] I was nominated to serve as a TPC member for BLOCKCHAIN'22. </li>
 	    <li type="circle">[01/2022] I was nominated to serve as a PC member for AutoML Conference 2022. </li>
@@ -118,7 +119,7 @@
 	    <li type="circle">[08/2021] I was nominated to serve as a PC member for WSDM 2022. </li>
 	    <li type="circle">[08/09/2021] I was officially hooded as a Ph.D.</li>
 	    <li type="circle">[07/05/2021] I successfully passed my doctoral defense!</li>
-	    <li type="circle">[06/2021] I was nominated to serve as a PC member for ICDM 2021. </li>
+	    <li type="circle">[06/2021] I was nominated to serve as a PC member for IEEE ICDM 2021. </li>
 	    <li type="circle">[05/2021] One paper was accepted by ACM SIGKDD 2021. </li>
 	    <li type="circle">[02/2021] One paper was accepted by ICBC 2021.</li>
 	    <li type="circle">[01/2021] One paper was accepted by WWW 2021.</li>
@@ -215,7 +216,7 @@
 		<li type="disc"> International Conference on Web Search and Data Mining (WSDM) 2022.</li>
 		<li type="disc"> NeurIPS 2021 Workshop on Meta-Learning (NeurIPS-w) 2021.</li>
 		<li type="disc"> IEEE International Conference on Big Data (BigData) 2021, 2022.</li>
-		<li type="disc"> IEEE International Conference on Data Mining (ICDM) 2021.</li>
+		<li type="disc"> IEEE International Conference on Data Mining (ICDM) 2021, 2022.</li>
 		<li type="disc"> International Conference on Artificial Intelligence and Statistics (AISTATS) 2021.</li>
 	</ul>
   <h4>Journal Reviewer</h4>
