--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
 
 <h2>Academic Talks</h2>
 	<ul>
-		<li type="disc">11/2021: Tsinghua University AI TIME, Beijing,China (Invited talk, Virtual).</li>
-		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore (Virtual).</li>
-		<li type="disc">11/2020: IEEE International Conference on Data Mining, Sorrento, Italy (Virtual).</li>
-		<li type="disc">08/2020: IEEE International Conference on Knowledge Graph, Nanjing, China (Virtual, two talks).</li>
+		<li type="disc">11/2021: Tsinghua University AI TIME, Beijing,China (Invited talk).</li>
+		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore.</li>
+		<li type="disc">11/2020: IEEE International Conference on Data Mining, Sorrento, Italy.</li>
+		<li type="disc">08/2020: IEEE International Conference on Knowledge Graph, Nanjing, China (two talks).</li>
 		<li type="disc">11/2019: IEEE International Conference on Data Mining, Beijing, China.</li>
 		<li type="disc">05/2015: Weinstein Cardiovascular Development Conference, Boston MA, USA (poster presentation).</li>
 		<li type="disc">04/2015: Shaker High School, Latham NY, USA.</li>
