--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[04/2022] Our workshop proposal (EAI-KDD) was accepted at ACM SIGKDD 2022. I will serve as the workshop chair.</li>
 	    <li type="circle">[03/2022] I was nominated to serve as a PC member for IEEE ICDM 2022.</li>
 	    <li type="circle">[02/2022] I was nominated to serve as a PC member for IEEE BigData 2022.</li>
 	    <li type="circle">[02/2022] I was nominated to serve as a TPC member for BLOCKCHAIN'22. </li>
@@ -205,25 +206,29 @@
 	
 
 <h2>Academic Services</h2>
-  <h4>Conference Reviewer</h4>
+  <h4>Conference</h4>
     	<ul>
-		<li type="disc"> International Congress on Blockchain and Applications (BLOCKCHAIN) 2022.</li>
-		<li type="disc"> International Conference on Automated Machine Learning (AutoML) 2022.</li>
-		<li type="disc"> ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
-		<li type="disc"> AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
-		<li type="disc"> WACV 2022 Workshop on DNOW (WACV-w) 2022.</li>
-		<li type="disc"> SIAM International Conference on Data Mining  (SDM) 2022.</li>
-		<li type="disc"> International Conference on Web Search and Data Mining (WSDM) 2022.</li>
-		<li type="disc"> NeurIPS 2021 Workshop on Meta-Learning (NeurIPS-w) 2021.</li>
-		<li type="disc"> IEEE International Conference on Big Data (BigData) 2021, 2022.</li>
-		<li type="disc"> IEEE International Conference on Data Mining (ICDM) 2021, 2022.</li>
-		<li type="disc"> International Conference on Artificial Intelligence and Statistics (AISTATS) 2021.</li>
+		<li type="disc"> [TPC Member] International Congress on Blockchain and Applications (BLOCKCHAIN) 2022.</li>
+		<li type="disc"> [PC Member] International Conference on Automated Machine Learning (AutoML) 2022.</li>
+		<li type="disc"> [PC Member on Research and Applied Science Tracks] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
+		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
+		<li type="disc"> [PC Member] SIAM International Conference on Data Mining  (SDM) 2022.</li>
+		<li type="disc"> [PC Member] International Conference on Web Search and Data Mining (WSDM) 2022.</li>
+		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData) 2021, 2022.</li>
+		<li type="disc"> [PC Member] IEEE International Conference on Data Mining (ICDM) 2021, 2022.</li>
+		<li type="disc"> [PC Member] International Conference on Artificial Intelligence and Statistics (AISTATS) 2021.</li>
+	</ul>
+  <h4>Workshop</h4>
+	<ul>
+		<li type="disc"> [<b>Main Orgnizer, Chair</b>, Reviewer] KDD 2022 Workshop on EAI (KDD-w) 2022.</li>
+		<li type="disc"> [Reviewer] WACV 2022 Workshop on DNOW (WACV-w) 2022.</li>
+		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning (NeurIPS-w) 2021.</li>
 	</ul>
   <h4>Journal Reviewer</h4>
     	<ul>
-		<li type="disc"> Journal of Frontiers in Big Data 2022. </li>
-		<li type="disc"> Environment and Planning B: Urban Analytics and City Science 2022. </li>
-		<li type="disc"> Journal of Big Data Research (JBDR) 2020. </li>
+		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data 2022. </li>
+		<li type="disc"> [Reviewer] Environment and Planning B: Urban Analytics and City Science 2022. </li>
+		<li type="disc"> [Reviewer] Journal of Big Data Research (JBDR) 2020. </li>
 	</ul>
 
 <h2>Academic Talks</h2>
