--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 	</ul>
   <h4>Workshop</h4>
 	<ul>
-		<li type="disc"> [<b>Main Orgnizer, Chair</b>, Reviewer] KDD 2022 Workshop on EAI (KDD-w) 2022.</li>
+		<li type="disc"> [<font color=a92b13>Main Orgnizer, Chair</font>, Reviewer] KDD 2022 Workshop on EAI (KDD-w) 2022.</li>
 		<li type="disc"> [Reviewer] WACV 2022 Workshop on DNOW (WACV-w) 2022.</li>
 		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning (NeurIPS-w) 2021.</li>
 	</ul>
