--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
 	</ul>
   <h4>Workshop</h4>
 	<ul>
+		<li type="disc"> [Reviewer] AutoML 2022 Late-Breaking Workshop 2022.</li>
 		<li type="disc"> [<font color=a92b13>Main Orgnizer, Chair</font>, Reviewer] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD 2022 Workshop on EAI (KDD-w)</a> 2022.</li>
 		<li type="disc"> [Reviewer] WACV 2022 Workshop on DNOW (WACV-w) 2022.</li>
 		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning (NeurIPS-w) 2021.</li>
