--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[05/2022] One paper was accepted by ACM SIGKDD 2022 (research track). </li>
 	    <li type="circle">[04/2022] Our workshop proposal (EAI-KDD) was accepted at ACM SIGKDD 2022. I will serve as the workshop chair.</li>
 	    <li type="circle">[03/2022] I was nominated to serve as a PC member for IEEE ICDM 2022.</li>
 	    <li type="circle">[02/2022] I was nominated to serve as a PC member for IEEE BigData 2022.</li>
@@ -121,7 +122,7 @@
 	    <li type="circle">[08/09/2021] I was officially hooded as a Ph.D.</li>
 	    <li type="circle">[07/05/2021] I successfully passed my doctoral defense!</li>
 	    <li type="circle">[06/2021] I was nominated to serve as a PC member for IEEE ICDM 2021. </li>
-	    <li type="circle">[05/2021] One paper was accepted by ACM SIGKDD 2021. </li>
+	    <li type="circle">[05/2021] One paper was accepted by ACM SIGKDD 2021 (research track). </li>
 	    <li type="circle">[02/2021] One paper was accepted by ICBC 2021.</li>
 	    <li type="circle">[01/2021] One paper was accepted by WWW 2021.</li>
 	    <li type="circle">[08/2020] One paper was accepted by ICDM 2020.</li>
@@ -129,6 +130,12 @@
 
 
 <h2>Publications</h2>
+
+<p>
+	<b>Adaptive Fairness-Aware Online Meta-Learning for Changing Environments.</b> To Appear </br>
+	<font color=a92b13>Chen Zhao*</font>, Feng Mi*, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen<br/>
+	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>KDD</strong>), 2022
+</p>
 	
 <p>
 	<b>Layer Adaptive Deep Neural Networks for Out-of-distribution Detection.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2203.00192">PDF</a></br>
