--- a/index.html
+++ b/index.html
@@ -103,25 +103,25 @@
     <ul>
 	    <li type="circle">[05/2022] One paper was accepted by ACM SIGKDD 2022 (research track). </li>
 	    <li type="circle">[04/2022] Our workshop proposal (EAI-KDD) was accepted at ACM SIGKDD 2022. I will serve as the workshop chair.</li>
-	    <li type="circle">[03/2022] I was nominated to serve as a PC member for IEEE ICDM 2022.</li>
-	    <li type="circle">[02/2022] I was nominated to serve as a PC member for IEEE BigData 2022.</li>
-	    <li type="circle">[02/2022] I was nominated to serve as a TPC member for BLOCKCHAIN'22. </li>
-	    <li type="circle">[01/2022] I was nominated to serve as a PC member for AutoML Conference 2022. </li>
+	    <li type="circle">[03/2022] I will serve as a PC member for IEEE ICDM 2022.</li>
+	    <li type="circle">[02/2022] I will serve as a PC member for IEEE BigData 2022.</li>
+	    <li type="circle">[02/2022] I will serve as a TPC member for BLOCKCHAIN'22. </li>
+	    <li type="circle">[01/2022] I will serve as a PC member for AutoML Conference 2022. </li>
 	    <li type="circle">[01/2022] One paper was accepted by PAKDD 2022. </li>
-	    <li type="circle">[01/2022] I was nominated to serve as a reviewer for the journal of Frontiers in Big Data. </li>
+	    <li type="circle">[01/2022] I will serve as a reviewer for the journal of Frontiers in Big Data. </li>
 	    <li type="circle">[12/2021] One paper was accepted by AAAI 2022. </li>
-	    <li type="circle">[11/2021] I was nominated to serve as a PC member for ACM SIGKDD 2022. </li>
+	    <li type="circle">[11/2021] I will serve as a PC member for ACM SIGKDD 2022. </li>
 	    <li type="circle">[11/2021] I will serve as an adjunct lecturer in the deparment of Information Science at UAlbany. </li>
-	    <li type="circle">[10/2021] I was nominated to serve as a PC member for AAAI 2022.</li>
-	    <li type="circle">[10/2021] I was nominated to serve as a reviewer for WACV 2022 Workshop on DNOW.</li>
+	    <li type="circle">[10/2021] I will serve as a PC member for AAAI 2022.</li>
+	    <li type="circle">[10/2021] I will serve as a reviewer for WACV 2022 Workshop on DNOW.</li>
 	    <li type="circle">[10/2021] One paper was accepted by NeurIPS 2021 Workshop on Meta-Learning.</li>
-	    <li type="circle">[09/2021] I was nominated to serve as a reviewer for NeurIPS 2021 Workshop on Meta-Learning .</li>
-	    <li type="circle">[09/2021] I was nominated to serve as a PC member for SDM 2022. </li>
-	    <li type="circle">[09/2021] I was nominated to serve as a PC member for IEEE BigData 2021.</li>
-	    <li type="circle">[08/2021] I was nominated to serve as a PC member for WSDM 2022. </li>
+	    <li type="circle">[09/2021] I will serve as a reviewer for NeurIPS 2021 Workshop on Meta-Learning .</li>
+	    <li type="circle">[09/2021] I will serve as a PC member for SDM 2022. </li>
+	    <li type="circle">[09/2021] I will serve as a PC member for IEEE BigData 2021.</li>
+	    <li type="circle">[08/2021] I will serve as a PC member for WSDM 2022. </li>
 	    <li type="circle">[08/09/2021] I was officially hooded as a Ph.D.</li>
 	    <li type="circle">[07/05/2021] I successfully passed my doctoral defense!</li>
-	    <li type="circle">[06/2021] I was nominated to serve as a PC member for IEEE ICDM 2021. </li>
+	    <li type="circle">[06/2021] I will serve as a PC member for IEEE ICDM 2021. </li>
 	    <li type="circle">[05/2021] One paper was accepted by ACM SIGKDD 2021 (research track). </li>
 	    <li type="circle">[02/2021] One paper was accepted by ICBC 2021.</li>
 	    <li type="circle">[01/2021] One paper was accepted by WWW 2021.</li>
