--- a/index.html
+++ b/index.html
@@ -241,7 +241,9 @@
 
 <h2>Academic Talks</h2>
 	<ul>
-		<li type="disc">11/2021: Tsinghua University AI TIME, Beijing,China (Invited talk).</li>
+		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
+		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China (Invited talk).</li>
+		<li type="disc">11/2021: Tsinghua University, AI TIME, Beijing, China (Invited talk).</li>
 		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore.</li>
 		<li type="disc">11/2020: IEEE International Conference on Data Mining, Sorrento, Italy.</li>
 		<li type="disc">08/2020: IEEE International Conference on Knowledge Graph, Nanjing, China (two talks).</li>
