--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[05/2022] I will serve as a PC member for CIKM 2022.</li>
 	    <li type="circle">[05/2022] One paper was accepted by ACM SIGKDD 2022 (research track). </li>
 	    <li type="circle">[04/2022] Our workshop proposal (EAI-KDD) was accepted at ACM SIGKDD 2022. I will serve as the workshop chair.</li>
 	    <li type="circle">[03/2022] I will serve as a PC member for IEEE ICDM 2022.</li>
@@ -215,6 +216,7 @@
 <h2>Academic Services</h2>
   <h4>Conference</h4>
     	<ul>
+		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM) 2022.</li>
 		<li type="disc"> [TPC Member] International Congress on Blockchain and Applications (BLOCKCHAIN) 2022.</li>
 		<li type="disc"> [PC Member] International Conference on Automated Machine Learning (AutoML) 2022.</li>
 		<li type="disc"> [PC Member on Research and Applied Science Tracks] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
